kustom/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-service
    app.kubernetes.io/component: person-service
    app.kubernetes.io/instance: person-service
  name: person-service
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: person-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: person-service
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/book-test/person-service:v1.0.0
          imagePullPolicy: IfNotPresent
          name: person-service
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
      restartPolicy: Always
